src/test/deca/context/valid/Objet/Selection-DownCast-Assign.deca
// Description:
//      Casting down and trying to access a field
//
// Results:
//      nothing
//
// History:
//      created on 17/1/2022

class A {
    int x;
    void foo() {
    }
}

class B extends A{
    int y;
    int fooB() {

    }
}

{
    A a = new A();
    A b = (B) (a);
    print(b.x);
}
