src/test/deca/context/invalid/Objet/ReDeclaration-Parent-Meth2.deca
// Description:
//      Declaring a methods with same ident as parent class
//
// Results:
//      RUle (2.7) return type of this method is not a subtype of the one in the parent class
//
// History:
//      created on 17/1/2022

class B {
    int x() {
        return 1;
    }
}

class A extends B {
    boolean x() {
    }
}